# ocl

./: CMakeLists.txt
cl_src/: nieco.cl
include/: ccl.h  ex.h
src/: ccl.c  ex.c  main.c
